--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lucene.version>7.3.0</lucene.version>
+        <lucene.version>7.6.0</lucene.version>
     </properties>
 
     <build>
@@ -32,10 +32,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>10</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -49,7 +48,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>edu.anadolu.cmdline.CLI</mainClass>
+                            <mainClass>edu.anadolu.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
