add bilkent dataset and save analyzed arff files

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,5 @@
 Milliyet405bin = /home/iorixxx/MilliyetCollectionZipFiles
 TTC3600 = /home/iorixxx/TTC-3600_Orj
 Kemik42bin = /home/iorixxx/42bin_haber/news
+TRT = /home/iorixxx/BilCat/structured/TRT
+MIL = /home/iorixxx/BilCat/structured/Milliyet
