--- a/config.properties
+++ b/config.properties
@@ -3,3 +3,4 @@ TTC3600 = /home/iorixxx/TTC-3600_Orj
 Kemik42bin = /home/iorixxx/42bin_haber/news
 TRT = /home/iorixxx/BilCat/structured/TRT
 MIL = /home/iorixxx/BilCat/structured/Milliyet
+AOF = /home/iorixxx/AOF
